--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
   <body>
     <%= yield %>
     <% if current_user %>
+      <%= link_to current_user.name, current_user %>
       <%= link_to 'Log out', logout_path, method: :delete %>
-    <% elsif !current_page?(controller: 'sessions', action: 'new') %>
+    <% elsif !(controller_name == 'sessions' && action_name == 'new') %>
       <%= link_to 'Log in', login_path %>
     <% end %>
   </body>
