--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,11 @@
     <br>
     <% if current_user %>
       <%= link_to current_user.name, current_user %>
-      <%= link_to 'Make a new post', new_post_path %>
       <%= link_to 'Log out', logout_path, method: :delete %>
+      <%= link_to 'Make a new post', new_post_path %>
     <% elsif !(controller_name == 'sessions' && action_name == 'new') %>
       <%= link_to 'Log in', login_path %>
     <% end %>
+    <%= link_to 'Feed', posts_path %>
   </body>
 </html>
